k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seorilabs-official-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
  labels:
    app: seorilabs-official
    app.kubernetes.io/name: seorilabs-official
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: public
  tls:
    - hosts:
        - www.seorilabs.com
        - seorilabs.com
      secretName: seorilabs-official-tls
  rules:
    - host: www.seorilabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seorilabs-official-service
                port:
                  number: 80
    - host: seorilabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seorilabs-official-service
                port:
                  number: 80
